update PS2 Data Viz

--- a/Data_visualization/Problem_Sets/PS_2.qmd
+++ b/Data_visualization/Problem_Sets/PS_2.qmd
@@ -17,32 +17,16 @@ format:
 
 library(tidyverse)
 library(cowplot)
-library(scales)
+library(colorblindr)
 theme_set(theme_cowplot())
 ```
 
 
-## Outline
-
-
-
-2. factors 
-- number that needs to change
-
-3. color with a numeric where the range is a challenge - e.g. pvals
-
-
-7. themes ^^
-removing stuff ^^
-
-8. check colorblind
-
-
-## Aedes food variability
+## Aedes food variability^[Zeller, M., and J. C. Koella. 2016. Effects of food variability on growth and reproduction of *Aedes aegypti*. *Ecol. Evol.* 6:552–559.]
 
 Zeller and Koella studied the effects of low vs high food levels at different stages of development on various life history traits in mosquitoes. Read in this dataset (`Aedes_food.txt`) and examine its structure. Make the column names more informative by changing `ef` to `early_food` and `lf` to `late_food`. Also change the values in these columns to `low` (currently coded as `L`) and `high` (currently coded as `H`). Add a single column containing all four combinations of early and late food (e.g. high_high, high_low...).   
 
-Zeller, M., and J. C. Koella. 2016. Effects of food variability on growth and reproduction of *Aedes aegypti*. *Ecol. Evol.* 6:552–559.
+
 
 ```{r}
 
@@ -154,24 +138,57 @@ DD %>%
 
 ```
 
-#fix
-In many cases, using color aesthetics is the best approach with customization of which colors to use with packages and or functions like scale_color_manual. However, in some cases with complex multi-element plots, you might need to take full control of the color of your points or some other element. Let's make this same plot using this method. 
-  1. To make the next steps a little easier, make a new tibble with any NAs from eggs4 and adultsurvival dropped
-  2.Choose four colors from the [R color chart](https://rstudio-pubs-static.s3.amazonaws.com/3486_79191ad32cf74955b4502b8530aad627.html). 
-  3. Use case_when to make a column in your tibble that specifies one of these colors for each of the four combinations.
-  4. 
 
-#color column by hand?
+In many cases, using color aesthetics is the best approach with customization of which colors to use with packages and or functions like scale_color_manual and this often helps avoid bugs. However, in some cases with complex multi-element plots, you might need to take full control of the color of your points or some other element. Let's make this same plot using this method. 
+  1.Choose four colors from the [R color chart](https://rstudio-pubs-static.s3.amazonaws.com/3486_79191ad32cf74955b4502b8530aad627.html) or use a brewer to generate four colors.
+  2. Use case_when to make a column in your tibble that specifies one of these colors for each of the four combinations.
+  3. Now use this new column as your fill aesthetic and observe what happens
+
 ```{r}
-#DD %>% 
-#  drop_na(any_of(c("eggs4","adultsurvival"))) |>
-#  ggplot(aes(eggs4, adultsurvival)) +
-#  geom_point(alpha=0.75, size=2, color=DD$col_test) +
-#  geom_smooth(method='lm',se = FALSE)+
-#  ylab("Adult Survival") +
-#  xlab("Age 4 Egg Number")
+DD |>
+  drop_na(any_of(c("eggs4","adultsurvival"))) |>
+  mutate("col_plot" = case_when(EL_food == "low_low" ~ "pink",
+                                   EL_food == "low_high" ~ "red",
+                                   EL_food == "high_low" ~ "lightblue",
+                                   EL_food == "high_high" ~ "blue")) |>
+  ggplot(aes(eggs4, adultsurvival, fill = col_plot)) +
+  geom_point(alpha=0.75, size=2, pch=21) +
+  geom_smooth(method='lm',se = FALSE)+
+  ylab("Adult Survival") +
+  xlab("Age 4 Egg Number")
 
 ```
+
+You should have seen that your colors are just treated as categories and given an automatic color. Now tell R you want to use those exact colors by using `scale_fill_identity` and/or `scale_color_identity`. Note that you will not have a legend unless you specify `breaks` and `labels` to this function. You'll see more of this when we look at customizing colors in plots more.    
+
+```{r}
+p1 <- DD |>
+  drop_na(any_of(c("eggs4","adultsurvival"))) |>
+  mutate("col_plot" = case_when(EL_food == "low_low" ~ "pink",
+                                   EL_food == "low_high" ~ "red",
+                                   EL_food == "high_low" ~ "lightblue",
+                                   EL_food == "high_high" ~ "blue")) |>
+  ggplot(aes(eggs4, adultsurvival, fill = col_plot)) +
+  geom_point(size=2, pch=21) +
+  geom_smooth(method='lm',se = FALSE, aes(color=col_plot))+
+  ylab("Adult Survival") +
+  xlab("Age 4 Egg Number") +
+  scale_fill_identity() +
+  scale_color_identity()
+
+p1
+
+```
+
+Check your color choices using one of the packages we showed you in lecture to test the accessibility of your plot for color blindness. Change your colors if needed. 
+
+```{r}
+
+cvd_grid(p1)
+
+```
+
+
 
 
 Let's look at how the food treatments affected the size of the mosquitoes at age 4 (`size.day4`). Make a plot of age 4 size vs early food and color the points by late food. Try out the following jitter values (0.1, 0.2, 0.3, 0.4, 0.5) and pick one that works well. 
@@ -262,11 +279,11 @@ DD |>
 
 
 
-## Bat calcars
+## Bat calcars^[
+Stanchak, K. E., J. H. Arbour, and S. E. Santana. 2019. Anatomical diversification of a skeletal novelty in bat feet. *Evolution* 73:1591–1603.]
 
 Stanchak et al. measured several skeletal aspects of bat limbs for over 200 species of bats. The bat calcar is a small cartilaginous projection from the ankle that helps to support the wing membrane. They hypothesized that the size of the calcar might be related to feeding ecology.
 
-Stanchak, K. E., J. H. Arbour, and S. E. Santana. 2019. Anatomical diversification of a skeletal novelty in bat feet. *Evolution* 73:1591–1603.
 
 Read in the `Bat_calcar.csv` data. Make a new tibble that only includes bat families with at least 4 observations. 
 
@@ -283,7 +300,20 @@ BB_filt <- BB |> filter(Family %in% Family_counts$Family)
 
 ```
 
-To explore the relationship between calcar length and leg length, plot , `Tib_mean` (average tibia length) versus `Cal_mean` (average calcar length). Facet by bat family. 
+To explore the relationship between calcar length and leg length, plot , `Tib_mean` (average tibia length) versus `Cal_mean` (average calcar length). Try using color to differentiate different bat families.  
+
+```{r}
+
+BB_filt |> 
+  ggplot(aes(Tib_mean, Cal_mean, color = Family)) +
+  geom_point()
+
+
+```
+
+
+
+Facet by bat family. 
 
 ```{r}
 
@@ -311,12 +341,49 @@ Which of these sets of plots do you think captures the pattern more accurately?
 
 
 
-## Stickleback life history
+## Stickleback life history^[Ghani, N. I. A., G. Herczeg, T. Leinonen, and J. Merilä. 2013. Evidence for genetic differentiation in timing of maturation among nine-spined stickleback populations. *J. Evol. Biol.* 26:775–782.]
 
-Ghani, N. I. A., G. Herczeg, T. Leinonen, and J. Merilä. 2013. Evidence for genetic differentiation in timing of maturation among nine-spined stickleback populations. *J. Evol. Biol.* 26:775–782.
+Ghani et al. performed a study looking at genetic differentiation in the timing of maturity in two stickleback populations using a laboratory breeding experiment where they raised differetn families of sticklebacks and measuring the timing of their maturation. Read in the `Stickleback_maturation.xlsx` data and examine its structure. 
+
 
 ```{r}
 library(readxl)
-D <- read_excel("../Data/Stickleback_maturation.xlsx")
+SS <- read_excel("../Data/Stickleback_maturation.xlsx")
 ```
+
+```{r}
+SS |>
+  ggplot(aes(Sex, `Maturation day`, color= `Family across`)) +
+  geom_point()
+
+```
+
+You probably noticed some issues with how the columns are coded (e.g. numeric vs factor). Alter these or create new columns to create the plot you want. Note that in this dataset, males are coded as 1 and females as 0. 
+
+```{r}
+SS |>
+  mutate("Maturation_day" = as.numeric(`Maturation day`),
+         "Family_fac" = as.factor(`Family across`),
+         "Sex" = case_when(Sex == 0 ~ "F",
+                           Sex == 1 ~ "M")) |>
+  ggplot(aes(Sex, Maturation_day, color= Family_fac)) +
+  geom_point()
+
+```
+
+Because we just want to see different families but the numbers are not meaningful, let's drop the legend using `theme`.
+
+```{r}
+SS |>
+  mutate("Maturation_day" = as.numeric(`Maturation day`),
+         "Family_fac" = as.factor(`Family across`),
+         "Sex" = case_when(Sex == 0 ~ "F",
+                           Sex == 1 ~ "M")) |>
+  ggplot(aes(Sex, Maturation_day, color= Family_fac)) +
+  geom_point() +
+  theme(legend.position = "none")
+
+```
+
+
 
